--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,8 @@
 
         <!--UI-->
         <webjars-bootstrap.version>3.3.7-1</webjars-bootstrap.version>
+        <webjars-datatables.version>1.10.15</webjars-datatables.version>
+        <webjars-jquery.version>3.1.1-1</webjars-jquery.version>
         <nekohtml.version>1.9.22</nekohtml.version>
 
         <!--hibernate-->
@@ -160,6 +162,22 @@
                     <artifactId>jquery</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>datatables</artifactId>
+            <version>${webjars-datatables.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.webjars</groupId>
+                    <artifactId>jquery</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>${webjars-jquery.version}</version>
         </dependency>
     </dependencies>
 
