--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <file.encoding>UTF-8</file.encoding>
-        <skipTests>false</skipTests>
+        <skipTests>true</skipTests>
 
         <jackson-json.version>2.8.9</jackson-json.version>
         <hsqldb.version>2.4.0</hsqldb.version>
